@@ -5,13 +5,15 @@ Development version (next release)
 - Performance and correctness tests can now (on top of clBLAS) be performed against CPU BLAS libraries
 - Fixed the use of events within the library
 - Changed the enum parameters to match the raw values of the cblas standard
-- Fixed the cache of previously compiled binaries and added a function to clear it
+- Fixed the cache of previously compiled binaries and added a function to fill or clear it
+- Added additional sample programs
 - Added level-1 routines:
   * SNRM2/DNRM2/ScNRM2/DzNRM2
   * SASUM/DASUM/ScASUM/DzASUM
   * SSUM/DSUM/ScSUM/DzSUM (non-absolute version of the above xASUM BLAS routines)
   * iSAMAX/iDAMAX/iCAMAX/iZAMAX
   * iSMAX/iDMAX/iCMAX/iZMAX (non-absolute version of the above ixAMAX BLAS routines)
+  * iSMIN/iDMIN/iCMIN/iZMIN (non-absolute minimum version of the above ixAMAX BLAS routines)
 
 Version 0.6.0
 - Added support for MSVC (Visual Studio) 2015
